tests/baselines/reference/exportAssignmentWithDeclareModifier.errors.txt
==== tests/cases/compiler/exportAssignmentWithDeclareModifier.ts (2 errors) ====
    var x;
    declare export = x;
    ~~~~~~~
!!! error TS1120: An export assignment cannot have modifiers.
    ~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.